--- a/automations.yaml
+++ b/automations.yaml
@@ -1,175 +1,14 @@
-- id: '1617647495253'
-  alias: koffie apparaat uit bij 30 min geen gebruik
-  description: zet koffie apparaat als deze 30 min niet is gebruikt
-  trigger:
-  - platform: numeric_state
-    entity_id: sensor.koffieapparaat_power
-    below: '50'
-    for:
-      hours: 0
-      minutes: 30
-      seconds: 0
-    attribute: power
-  condition:
-  - condition: state
-    entity_id: switch.koffieapparaat
-    state: 'on'
-  action:
-  - service: switch.turn_off
-    target:
-      entity_id: switch.koffieapparaat
-  mode: single
-- id: '1617723804999'
-  alias: Jasper weg lampen uit
-  description: Jasper weg lampen op zijn kamer uit
-  trigger:
-  - platform: zone
-    entity_id: person.jasper_bierlaagh
-    zone: zone.home
-    event: leave
-  condition: []
-  action:
-  - service: light.turn_off
-    target:
-      device_id:
-      - c19a67f8e10d3581c13d4391adc7e833
-      - 23885973c5decd67f87e59d48115246d
-      - 92715a7c2d20dd04cf8871c42865a03e
-  mode: single
-- id: '1638129488106'
-  alias: heatpanel on
-  description: ''
-  trigger:
-  - platform: time
-    at: 07:30:00
-  condition:
-  - condition: time
-    weekday:
-    - mon
-    - tue
-    - wed
-    - thu
-  action:
-  - service: climate.set_hvac_mode
-    target:
-      device_id: f4807beec42e136b359baa70e1e8071c
-    data:
-      hvac_mode: heat
-  - service: climate.set_temperature
-    target:
-      device_id: f4807beec42e136b359baa70e1e8071c
-    data:
-      temperature: 21
-  mode: single
-- id: '1638387456731'
-  alias: 'Sander weg lampen uit '
-  description: Sander weg lampen op zijn kamer uit
-  trigger:
-  - platform: zone
-    entity_id: person.sander_bierlaagh
-    zone: zone.home
-    event: leave
-  condition: []
-  action:
-  - service: light.turn_off
-    target:
-      device_id:
-      - 70ed4e159957fde67d46c3154ece3c26
-      - c1680213fe846b894cc9b79aeb4a2365
-      - c18c4b65072e65b2a65695b39d0ada21
-      - d57aa9ba9400d36b0e6027ced125431a
-      - a7c848cc2ce1624a48754c99eb8c2aac
-      - b39e4810cbf0eb87f169de116cb6e5bc
-  mode: single
-- id: '1639731038109'
-  alias: heatpanel off
-  description: ''
-  trigger:
-  - platform: time
-    at: '19:30:00'
-  condition:
-  - condition: time
-    weekday:
-    - mon
-    - tue
-    - wed
-    - thu
-  action:
-  - service: climate.set_hvac_mode
-    target:
-      entity_id:
-      - climate.your_eurom_heater
-    data:
-      hvac_mode: 'off'
-  mode: single
-- id: '1642431125775'
-  alias: test telegram
-  description: ''
-  trigger:
-  - platform: time
-    at: 00:00:00
-  condition: []
-  action:
-  - service: notify.mark_telegram
-    data:
-      title: test bericht
-      message: That's an example that _sends_ a *formatted* message with a custom
-        inline keyboard.
-      data:
-        inline_keyboard:
-        - Lamp aan:/lamp-on, Lamp uit:/lamp-off
-  mode: single
-- id: '1642443812119'
-  alias: Telegram bot turn on lamp
-  description: ''
-  trigger:
-  - platform: event
-    event_type: telegram_command
-    event_data:
-      command: /lamp-on
-  condition: []
-  action:
-  - service: light.turn_on
-    target:
-      entity_id: light.eettafel
-  mode: single
-- id: '1642443812120'
-  alias: Telegram bot turn off lamp
-  description: ''
-  trigger:
-  - platform: event
-    event_type: telegram_command
-    event_data:
-      command: /lamp-off
-  condition: []
-  action:
-  - service: light.turn_off
-    target:
-      entity_id: light.eettafel
-  mode: single
-- id: '1642447127792'
-  alias: lamp callback
-  trigger:
-  - platform: event
-    event_type: telegram_callback
-    event_data:
-      data: /lamp-on
-  action:
-  - service: light.turn_on
-    target:
-      entity_id: light.eettafel
-  hide_entity: true
-  mode: single
-- id: '1642447127793'
-  alias: lamp callback
-  trigger:
-  - platform: event
-    event_type: telegram_callback
-    event_data:
-      data: /lamp-off
-  action:
-  - service: light.turn_off
-    target:
-      entity_id: light.eettafel
-  hide_entity: true
-  mode: single
+# copied from frenk 
+# https://github.com/frenck/home-assistant-config/blob/master/config/automations.yaml
+# This file is used by the automations editor
+# in the Home Assistant frontend.
+#
+# I personally do not use it, mainly because I like doing this in YAML.
+# However, from time to time, it is helpful to click a bit and see
+# what the frontend makes of it.
+#
+# This file must exist for the frontend Automation editor to work.
+# Hence, it is here, empty. 
+#
+# If you are looking for my automations: See automations folder.
+[]
