--- a/integrations/http.yaml
+++ b/integrations/http.yaml
@@ -19,5 +19,5 @@ http:
   # Number of failed login attempts from a single IP after which it will
   # be automatically banned.
   #login_attempts_threshold: 5
-  ssl_certificate: /ssl/fullchain.pem
-  ssl_key: /ssl/privkey.pem
+  #ssl_certificate: /ssl/fullchain.pem
+  #ssl_key: /ssl/privkey.pem
