correct typos in some yaml files

--- a/esphome/powerplug_1.yaml
+++ b/esphome/powerplug_1.yaml
@@ -16,9 +16,9 @@ logger:
 
 # Enable Home Assistant API
 api:
-  password: 'PASSWORD'
+  password: !secret esp_ha_api_ww
 ota:
-  password: 'PASSWORD'
+  password: !secret esp_ha_api_ww
 
 # Enable Web server
 web_server:
