--- a/esphome/powerplug_2.yaml
+++ b/esphome/powerplug_2.yaml
@@ -22,10 +22,10 @@ logger:
 
 # Enable Home Assistant API
 api:
-  password: 'PASSWORD'
+  password: !secret esp_ha_api_ww
   reboot_timeout: 0s
 ota:
-  password: 'PASSWORD'
+  password: !secret esp_ha_api_ww
 
 # Enable Web server
 web_server:
