--- a/entities/sensors/energy.yaml
+++ b/entities/sensors/energy.yaml
@@ -1,6 +1,6 @@
 ---
-platform: integration
-source: sensor.current_power
-name: energy_spent
-unit_prefix: k
-round: 2
+#platform: integration
+#source: sensor.current_power
+#name: energy_spent
+#unit_prefix: k
+#round: 2
