--- a/integrations/utility_meter.yaml
+++ b/integrations/utility_meter.yaml
@@ -1,24 +1,2 @@
 ---
-utility_meter:
-  waterverbuik_douchen_vandaag:
-    source: sensor.waterverbruik_douchen
-    cycle: daily
-  waterverbuik_douchen_dit_kwartier:  
-    source: sensor.waterverbruik_douchen
-    cycle: quarter-hourly
-  waterverbuik_douchen_dit_uur:
-    source: sensor.waterverbruik_douchen
-    cycle: hourly
-  waterverbuik_douchen_deze_week:
-    source: sensor.waterverbruik_douchen
-    cycle: weekly
-  waterverbuik_douchen_deze_maand:
-    source: sensor.waterverbruik_douchen
-    cycle: monthly
-  waterverbuik_douchen_dit_kwartaal:
-    source: sensor.waterverbruik_douchen
-    cycle: quarterly
-  waterverbuik_douchen_dit_jaar:
-    source: sensor.waterverbruik_douchen
-    cycle: yearly  
-#!include_dir_merge_named  ../entities/utility_meter
+utility_meter: !include_dir_merge_named  ../entities/utility_meter
