--> all snsrs in watermeter_nw to seperate sensors

--- a/integrations/watermeter_nw.yaml
+++ b/integrations/watermeter_nw.yaml
@@ -1,96 +1,8 @@
+---
 # Watermeter toonWater
 # UTILITYS WATERMETER
 # moved to ../entities/utility_meter/waterverbruik
 # Watermeter toonWater 
-sensor:
-
-# CALCULATIE WATERMETER
-  - platform: template
-    sensors: 
-      waterprijs_per_dag:
-        friendly_name: "Kosten Waterverbruik Vandaag"
-        unit_of_measurement: "EUR"
-        icon_template: "mdi:currency-eur"
-        value_template: >-
-          {% set a = states('sensor.waterverbuik_vandaag') | float %}
-          {% set b = states('input_number.waterprijs_per_liter') | float %}
-          {% set c = states('input_number.belasting_op_leidingwater') | float  %}
-          {% set d = states('input_number.vastrecht_water') | float / 365 %}
-          {{ (((a * b) + a * c) + d) | round(2) }}  
-      waterprijs_per_week:
-        friendly_name: "Kosten Waterverbruik Deze Week"
-        unit_of_measurement: "EUR"
-        icon_template: "mdi:currency-eur"
-        value_template: >-
-          {% set a = states('sensor.waterverbuik_deze_week') | float %}
-          {% set b = states('input_number.waterprijs_per_liter') | float %}
-          {% set c = states('input_number.belasting_op_leidingwater') | float  %}
-          {% set d = states('input_number.vastrecht_water') | float / 52 %}
-          {{ (((a * b) + a * c) + d) | round(2) }}    
-      waterprijs_per_maand:
-        friendly_name: "Kosten Waterverbruik Deze Maand"
-        unit_of_measurement: "EUR"
-        icon_template: "mdi:currency-eur"
-        value_template: >-
-          {% set a = states('sensor.waterverbuik_deze_maand') | float %}
-          {% set b = states('input_number.waterprijs_per_liter') | float %}
-          {% set c = states('input_number.belasting_op_leidingwater') | float  %}
-          {% set d = states('input_number.vastrecht_water') | float /12 %}
-          {{ (((a * b) + a * c) + d) | round(2) }}
-      waterprijs_per_kwartaal:
-        friendly_name: "Kosten Waterverbruik Dit Kwartaal"
-        unit_of_measurement: "EUR"
-        icon_template: "mdi:currency-eur"
-        value_template: >-
-          {% set a = states('sensor.waterverbuik_dit_kwartaal') | float %}
-          {% set b = states('input_number.waterprijs_per_liter') | float %}
-          {% set c = states('input_number.belasting_op_leidingwater') | float  %}
-          {% set d = states('input_number.vastrecht_water') | float / 4 %}
-          {{ (((a * b) + a * c) + d) | round(2) }}
-      waterprijs_per_jaar:
-        friendly_name: "Kosten Waterverbruik Dit Jaar"
-        unit_of_measurement: "EUR"
-        icon_template: "mdi:currency-eur"
-        value_template: >-
-          {% set a = states('sensor.waterverbuik_dit_jaar') | float %}
-          {% set b = states('input_number.waterprijs_per_liter') | float %}
-          {% set c = states('input_number.belasting_op_leidingwater') | float  %}
-          {% set d = states('input_number.vastrecht_water') | float  %}
-          {{ (((a * b) + a * c) + d) | round(2) }}    
-
-
-  - platform: rest
-    name: watermeter
-    json_attributes:
-      - waterflow
-      - waterquantity
-    resource: !secret watermeter_ip
-  - platform: template
-    sensors:
-      watermeter_flow:
-        friendly_name: "Huidige waterflow"
-        value_template: '{{states.sensor.watermeter.attributes["waterflow"] }}'
-        unit_of_measurement: "l/m"
-        icon_template: "mdi:water-pump"
-      watermeter_quantity:
-        friendly_name: "Huidige watermeterstand"
-        value_template: '{{states.sensor.watermeter.attributes["waterquantity"] }}'
-        unit_of_measurement: "L"
-        icon_template: "mdi:water"
-
-#SENSOREN WATERVERBRUIK PER PERIODE
-      waterverbruik_vorige_week:
-        friendly_name: Waterverbruik Vorige Week
-        unit_of_measurement: L
-        icon_template: "mdi:water"
-        value_template: "{{ state_attr('sensor.waterverbuik_deze_week','last_period') }}"
-      waterverbruik_vorige_maand:
-        friendly_name: Waterverbruik Vorige Maand
-        unit_of_measurement: L
-        icon_template: "mdi:water"
-        value_template: "{{ state_attr('sensor.waterverbuik_deze_maand','last_period') }}"
-      waterverbruik_vorig_jaars:
-        friendly_name: Waterverbruik Vorig Jaar
-        unit_of_measurement: L
-        icon_template: "mdi:water"
-        value_template: "{{ state_attr('sensor.waterverbuik_dit_jaar','last_period') }}"
+# Sensors moved to "../entities/sensors/water/"
+# SENSOREN WATERVERBRUIK PER PERIODE
+# moved to "../entities/sensors/water/"
