--- a/integrations/recorder.yaml
+++ b/integrations/recorder.yaml
@@ -5,12 +5,7 @@
 # https://www.home-assistant.io/integrations/recorder/
 #
 recorder:
-  # The number of days of history to keep in the recorder database
-    purge_keep_days: 1825
-
-  # How often (in days) the purge task runs
-    #purge_interval: 5
-    #db_url: !sectret recorder_url
+  db_url: !secret recorder_db_url
     #exclude:
     #    domains:
     #    - media_player
